# pyaedt-examples

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  build.py  conftest.py  docker-compose.yaml  index.html  pyaedt_settings.yaml  pyproject.toml  pytest.ini  setup.py  tox.ini  versions.json
.github/: CAT6-Cable.md  CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_MODULES/: class3.md
.github/ISSUE_TEMPLATE/: bug-form.yml  feature.yml
.github/workflows/: ci.yml  ci_cd.yml  label.yml  sync_release_tag.yml  test_all_examples.yml
doc/: .vale.ini  Makefile  make.bat  pyaedt_settings.yaml
doc/source/: conf.py  index.rst
doc/styles/: .gitignore
docker/: Dockerfile.centos7  Dockerfile.default
example/: __main__.py  constants.py  index.rst
example/00-EDB/: 00_EDB_Create_VIA.py  01_edb_example.py  02_edb_to_ipc2581.py  03_5G_antenna_example_parametrics.py  04_edb_parametrized_design.py  05_Plot_nets.py  06_Advanced_EDB.py  08_CPWG.py  09_Configuration.py  10_GDS_workflow.py  11_post_layout_parameterization.py  12_edb_sma_connector_on_board.py  13_edb_create_component.py  14_edb_create_parametrized_design.py  15_ac_analysis.py
examples/: extest.py  index.rst  template.py
examples/00-EDB/: 00_EDB_Create_VIA.py  01_edb_example.py  01_power_integrity.py  02_edb_to_ipc2581.py  03_5G_antenna_example_parametrics.py  04_edb_parametrized_design.py  05_Plot_nets.py  06_Advanced_EDB.py  08_CPWG.py  09_Configuration.py  10_GDS_workflow.py  11_post_layout_parameterization.py  12_edb_sma_connector_on_board.py  13_edb_create_component.py  14_edb_create_parametrized_design.py  15_ac_analysis.py
examples/00-EDB-legacy/: 02_edb_to_ipc2581.py  05_Plot_nets.py  11_post_layout_parameterization.py
examples/01-HFSS3DLayout/: 01_dcir_analysis.py  01_power_integrity.py  01_power_integrity.py.back  02_dc_ir_analysis.py  02_dc_ir_analysis.py.back  03_gui_manipulation.py  04_pre_layout_signal_integrity.py  04_pre_layout_sma_connector_on_pcb.py  05_electrothermal_analysis.py  05_power_electronics.py  06_ipc2581_export.py  07_import_gds.py  08_pre_layout_parametrized_pcb.py  Dcir_in_3DLayout.py  EDB_in_3DLayout.py  HFSS3DLayout_Via.py  Hfss3DComponent.py  index.rst
examples/01-HFSS3DLayout-legacy/: Dcir_in_3DLayout.py  EDB_in_3DLayout.py  Hfss3DComponent.py
examples/01-Modeling-Setup/: Configurations.py  CoordinateSystem.py  HFSS_CoordinateSystem.py  Optimetrics.py  Polyline_Primitives.py  index.rst
examples/02-HFSS/: Array.py  Create_3d_Component_and_use_it.py  Encrypted_3DComp_ACIS_to_Parasolid.py  Flex_CPWG.py  HFSS_Choke.py  HFSS_Dipole.py  HFSS_FSS_unitcell.py  HFSS_Spiral.py  HFSS_eigenmode.py  Probe_Fed_Patch.py  Waveguide_Filter.py  index.rst
examples/02-SBR+/: SBR_City_Import.py  SBR_Doppler_Example.py  SBR_Example.py  SBR_Time_Plot.py  index.rst
examples/02-aedt_general/: configuration_files.py  index.rst  optimetrics.py
examples/03-Maxwell/: Maxwell2D_Control_Program.py  Maxwell2D_DCConduction.py  Maxwell2D_EC_Reduced_Matrix.py  Maxwell2D_Electrostatic.py  Maxwell2D_H_contour_opt1.py  Maxwell2D_H_contour_opt2.py  Maxwell2D_Lorentz_actuator.py  Maxwell2D_NissanLeaf.py  Maxwell2D_PMSynchronousMotor.py  Maxwell2D_Transient.py  Maxwell2D_transformer_LL.py  Maxwell3DTeam7.py  Maxwell3D_Choke.py  Maxwell3D_Segmentation.py  Maxwell3D_Team3_bath_plate.py  Maxwell3D_Team3_bath_plate.py.back  Maxwell3D_Transient_Fields_Export.py  Maxwell_Conductor.py  Maxwell_Control_Program.py  Maxwell_Magnet.py  Maxwell_RMxprt.py  Maxwell_Transformer_Coreloss.py  Maxwell_external_circuit.py  index.rst
examples/03-Maxwell2D/: Maxwell2D_Control_Program.py  Maxwell2D_DCConduction.py  Maxwell2D_EC_Reduced_Matrix.py  Maxwell2D_Electrostatic.py  Maxwell2D_H_contour_opt1.py  Maxwell2D_H_contour_opt2.py  Maxwell2D_Lorentz_actuator.py  Maxwell2D_PMSynchronousMotor.py  Maxwell2D_Transient.py  Maxwell2D_external_circuit.py  Maxwell2D_transformer_LL.py  index.rst
examples/03-Maxwell3D/: Maxwell3DTeam7.py  Maxwell3D_Choke.py  Maxwell3D_Conductor.py  Maxwell3D_Segmentation.py  Maxwell3D_Team3_bath_plate.py  Maxwell3D_Transformer_Coreloss.py  Maxwell3D_Transient_Fields_Export.py  index.rst
examples/03-high_frequency/: index.rst
examples/04-HFSS3DLayout/: 01_power_integrity.py  02_dc_ir_analysis.py  03_gui_manipulation.py  04_pre_layout_sma_connector_on_pcb.py  06_ipc2581_export.py  index.rst
examples/04-Icepak/: Icepak_3DComponents_Example.py  Icepak_CSV_Import.py  Icepak_ECAD_Import.py  Icepak_Example.py  Sherlock_Example.py  icepak_3d_components_example.py  icepak_csv_import.py  icepak_ecad_import.py  icepak_graphic_card_example.py  icepak_sherlock_example.py  index.rst  sherlock_example.py
examples/04-Layout/: index.rst
examples/04-low_frequency/: index.rst
examples/05-Icepak/: icepak_3d_components_example.py  icepak_csv_import.py  icepak_ecad_import.py  icepak_ecad_import_v2.py  icepak_graphic_card_example.py  icepak_sherlock_example.py
examples/05-Q3D/: Q2D_Armoured_Cable.py  Q2D_Example_CPWG.py  Q2D_Example_Stripline.py  Q3D_DC_IR.py  Q3D_Example.py  Q3D_Example_Busbars.py  Q3D_from_EDB.py  index.rst
examples/05-electrothermal/: coaxial_hfss_icepak.py  component_3d.py  components_csv.py  ecad_import.py  electrothermal.py  graphic_card.py  icepak_circuit_hfss_coupling.py  index.rst  sherlock.py
examples/06-AEDT/: index.rst
examples/06-Multiphysics/: Circuit_HFSS_Icepak_Coupling.py  Hfss_Icepak_Coupling.py  Hfss_Mechanical.py  MRI.py  Maxwell-Mechanical.py  Maxwell_Icepak_Wireless_Charging.py  index.rst  maxwell-mech.py
examples/06-Q3D/: Q2D_Armoured_Cable.py  Q2D_Example_CPWG.py  Q2D_Example_Stripline.py  Q3D_DC_IR.py  Q3D_Example_Busbars.py  Q3D_from_EDB.py  index.rst
freeze/: freeze_nuitka.py
requirements/: requirements.txt  requirements_build.txt  requirements_doc.txt  requirements_doc_ci.txt  requirements_example.txt  requirements_tests.txt
tests/: conftest.py  example_test.py  run_examples.py  test_edb_writer.py  test_models.py
version/: index.html
(+1047 files in other folders)
