[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyaedt-examples"
dynamic = ["version"]
description = "PyAEDT Application Examples"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "build==1.0.3",
    "numpy",
    "pyaedt==0.8.1",
    "twine==5.0.0",
    "pydantic",
    "pyvista",
    "jinja2",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.14.0",
    "imageio==2.34.0",
    "imageio-ffmpeg==0.4.9",
    "ipython==8.21.0",
    "ipywidgets==8.1.2",
    "joblib==1.3.2",
    "jupyterlab==4.1.2",
    "jupytext==1.16.1",
    "matplotlib==3.8.3",
    "nbsphinx==0.9.3",
    "numpydoc==1.6.0",
    "osmnx",
    "pytest-sphinx==0.6.0",
    "pyvista==0.43.3",
    "recommonmark==0.7.1",
    "scikit-learn==1.4.1.post1",
    "Sphinx==7.2.6",
    "sphinx-autobuild==2024.2.4",
    "sphinx-autodoc-typehints==2.0.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.0",
    "sphinxcontrib-websupport==1.2.7",
    "SRTM.py",
    "utm",
    "scikit-rf==0.31.0",
    "openpyxl==3.1.2",
    "sphinx_design",
    "sphinx_jinja",
    "vtk==9.2.6",
    "pypandoc",
]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[tool.flit.module]
name = "ansys.pyaedt.examples"

[project.urls]
Source = "https://github.com/ansys/pyaedt-examples.git"
Tracker = "https://github.com/ansys/pyaedt-examples.git/issues"
Homepage = "https://github.com/ansys/pyaedt-examples.git"

[tool.black]
line-length=100

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "ansys", "tests"]
line_length=100

[tool.codespell]
skip = '*.css,*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
quiet-level = 3

[tool.coverage.run]
source = ["ansys.pyaedt.examples"]

[tool.coverage.report]
show_missing = true
exclude_lines = [  
    'if __name__ == .__main__.:'  
]  

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.pyaedt.examples --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]