[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyaedt-examples"
dynamic = ["version"]
description = "PyAEDT Application Examples"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "build==1.2.1",
    "numpy",
    "pyaedt@git+https://github.com/ansys/pyaedt.git",
    "twine==5.1.0",
    "pydantic",
    "pyvista",
    "jinja2",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.16.5",
    "imageio==2.34.1",
    "imageio-ffmpeg==0.5.0",
    "ipython==8.25.0",
    "ipywidgets==8.1.3",
    "joblib==1.4.2",
    "jupyterlab==4.2.1",
    "jupytext==1.16.2",
    "matplotlib==3.9.0",
    "nbsphinx==0.9.4",
    "nbconvert < 7.17",
    "numpydoc==1.7.0",
    "osmnx",
    "pytest-sphinx==0.6.3",
    "pyvista==0.43.8",
    "recommonmark==0.7.1",
    "scikit-learn==1.5.0",
    "Sphinx==7.3.7",
    "sphinx-autobuild==2024.4.16",
    "sphinx-autodoc-typehints==2.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.2",
    "sphinxcontrib-websupport==1.2.7",
    "SRTM.py",
    "utm",
    "scikit-rf==1.0.0",
    "openpyxl==3.1.3",
    "sphinx_design",
    "sphinx_jinja",
    "vtk==9.3.0",
    "pypandoc",
]
tests = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
]

[tool.flit.module]
name = "ansys.pyaedt.examples"

[project.urls]
Source = "https://github.com/ansys/pyaedt-examples.git"
Tracker = "https://github.com/ansys/pyaedt-examples.git/issues"
Homepage = "https://github.com/ansys/pyaedt-examples.git"

[tool.black]
line-length=100

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "ansys", "tests"]
line_length=100

[tool.codespell]
skip = '*.css,*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
quiet-level = 3

[tool.coverage.run]
source = ["ansys.pyaedt.examples"]

[tool.coverage.report]
show_missing = true
exclude_lines = [  
    'if __name__ == .__main__.:'  
]  

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.pyaedt.examples --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]
